fix: toc not align

--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -161,7 +161,7 @@ h6:focus .header-anchor {
 }
 
 .table-of-contents ul > li > a {
-  --uno: inline-block align-top w-full op75 hover:op100 transition before:hidden after:hidden;
+  --uno: inline-block leading-inherit align-top w-full op75 hover:op100 transition before:hidden after:hidden;
 }
 
 .code-wrap .line {
